2016-01-08  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-405

	* src/workspace.cc: ppath_stepRefractionEuler was corrected to
	ppath_stepRefractionBasic.And moved covmat_sx_inv to correct
	place, alphabetically.

2016-01-08  Simon Pfreundschuh   <simonpf@chalmers.se>

	* arts-2-3-404

	* doc/uguide/matrix_vector.tex: Updated Sparse section.

2016-01-08  Simon Pfreundschuh   <simonpf@chalmers.se>

	* arts-2-3-403

	* src/CMakeLists.txt: Added OpenMP flag for timer class and
	  removed oem.cc from compilation files.

	* src/matpackII.*: Renamed identity matrix function to id_mat(...).
	Implemented operators *=, /=, +=, -= in order to generalize the code
	written for dense matrices.

	* src/m_oem.cc: Made the oem(...) function a template and called it
	oem_template(...) to avoid code duplication. Added wrapper oem(...) that
	instantiates the template.

	* src/m_sensor.cc: Adapted call to sparse identity matrix.

	* src/methods.cc: Added SparseIdentityMatrix function.

	* src/oem.*: Rewrote oem_cost_y as function template.

	* src/test_sparse.*: Added tests for operators *=, /=, +=, -=.

	* src/workspace.cc: Changed types of measurement covariance matrices.

2016-01-08  Lukas Kluft  <lukas.kluft@gmail.com>

	* arts-2-3-402

	* src/m_sensor.cc (backend_channel_responseGaussian): fixed indexing.

2016-01-07  Simon Pfreundschuh   <simonpf@chalmers.se>

	* arts-2-3-401

	* src/CMakeLists.txt: Added OpenMP flag for timer class and
	  removed oem.cc from compilation files.

	* src/matpackII.*: Added const classifier to Matrix()

	* src/oem.*: Added templates to interface functions
	oem_levenberg_marquardt(...) and oem_gauss_newton(...). Adapted
	NonLinearOEM class.

	* src/test_oem.cc: Added tests for OEM with sparse matrices.

	* src/timings.h: Added some comments.

2016-01-06  Simon Pfreundschuh   <simonpf@chalmers.se>

	* arts-2-3-400

	* src/CMakeLists.txt: Removed gfortran library relic.

2016-01-06  Simon Pfreundschuh   <simonpf@chalmers.se>
