@@ -743,7 +743,7 @@ void oem(
     Vector&                     oem_diagnostics,
     Vector&                     ml_ga_history,
     const Vector&                     y,
-    const Matrix&                       covmat_sx_inv,
+    const Sparse&                       covmat_sx_inv,
     const Sparse&                       covmat_so_inv,
     const Index&                      jacobian_do,
     const ArrayOfRetrievalQuantity&   jacobian_quantities,
@@ -775,37 +775,3 @@ void oem(
                   method, max_start_cost, x_norm, max_iter, stop_dx,
                   ml_ga_settings, clear_matrices, display_progress, v );
 }
-
-// template
-// void oem< Sparse, Matrix >(
-//     Workspace&                  ws,
-//     Vector&                     x,
-//     Vector&                     xa,
-//     Vector&                     yf,
-//     Matrix&                     jacobian,
-//     Matrix&                     dxdy,
-//     Vector&                     oem_diagnostics,
-//     Vector&                     ml_ga_history,
-//     const Vector&                     y,
-//     const Matrix&                       covmat_sx_inv,
-//     const Sparse&                       covmat_so_inv,
-//     const Index&                      jacobian_do,
-//     const ArrayOfRetrievalQuantity&   jacobian_quantities,
-//     const ArrayOfArrayOfIndex&        jacobian_indices,
-//     const Agenda&                     inversion_iterate_agenda,
-//     const Index&                      atmosphere_dim,
-//     const Vector&                     p_grid,
-//     const Vector&                     lat_grid,
-//     const Vector&                     lon_grid,
-//     const Tensor3&                    t_field,
-//     const Tensor4&                    vmr_field,
-//     const ArrayOfArrayOfSpeciesTag&   abs_species,
-//     const String&                     method,
-//     const Numeric&                    max_start_cost,
-//     const Vector&                     x_norm,
-//     const Index&                      max_iter,
-//     const Numeric&                    stop_dx,
-//     const Vector&                     ml_ga_settings,
-//     const Index&                      clear_matrices,
-//     const Index&                      display_progress,
-//     const Verbosity& );
