@@ -1,3 +1,13 @@
+2016-01-11  Simon Pfreundschuh   <simonpf@chalmers.se>
+
+	* arts-2-3-406
+
+	* oem.* Added function for the computation of the averaging kernel.
+
+	* m_oem.cc Changed type of covmat_sx_inv to sparse.
+
+	* workspace.cc Changed type of covmat_sx_inv to sparse.
+
 2016-01-08  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-405
